# round-trip

./: .gitignore  .gitmodules  LICENSE  Pipfile  README.md  evaluate_model_test.py  examples.py  pyproject.toml  requirements.txt  test.py  validate_mermaid.py
data/pet/generated_json/10_1/: 2.mmd  3.mmd  4.gv  5.gv
data/pet/generated_json/10_13/: 1.gv  2.mmd  3.mmd  4.gv  5.gv
data/pet/generated_json/10_6/: 1.gv  2.mmd  3.mmd  4.gv
data/pet/generated_json/1_2/: 1.gv  2.mmd  3.mmd  4.gv  5.gv
data/pet/generated_json/1_3/: 1.mmd  2.gv  3.mmd  4.gv  5.gv
data/pet/generated_json/3_3/: 1.mmd  2.mmd  3.mmd  4.gv  5.gv
data/pet/generated_json/5_2/: 1.mmd  2.mmd  3.mmd  4.gv  5.gv  6.gv
data/pet/generated_mermaid/10_1/: 1.mmd  2.mmd  3.mmd  4.gv
data/pet/generated_mermaid/10_13/: 3.mmd  4.gv  5.gv
data/pet/generated_mermaid/10_6/: 2.mmd  3.mmd  4.gv
data/pet/generated_mermaid/1_2/: 3.mmd  5.gv
data/pet/generated_mermaid/1_3/: 1.mmd  3.mmd
examples/: generated_1.txt  generated_1_mermaid.txt  generated_2.txt  ground_1.txt  ground_1_mermaid.txt  ground_2.txt  mermaid_1.txt  mermaid_2.txt  mermaid_3.txt
examples/errors/: jg_1_1.txt  mg_1_1.txt
source/: docu.md
source/llm_connect/: ask_open_ai.py  docs.txt  test.md
source/m2t/: create_description.py
source/merson/: merson_converter.py
source/t2m/: create_model.py  prompt_engineering.py
src/llm_connect/: ask_open_ai.py  parameters.json
src/m2t/: create_description.py
src/merson/: merson_converter.py
src/model_info/: get_information.py
src/t2m/: create_model.py
(+7 files in other folders)
