[tool.poetry]
name = "round-tripping"
version = "0.1.0"
description = ""
authors = ["Nataliia Klievtsova"]
readme = "README.md"

[tool.poetry.plugins.dotenv]
location = ".env"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
sentence_transformers = "^2.2.2"
poetry-dotenv-plugin = "^0.2.0"

[tool.poetry.group.dev.dependencies]

pandas = "^2.1.3"
ipython = "^8.17.2"
openpyxl = "^3.1.2"
openai = "^1.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
